pkl-core/src/test/files/LanguageSnippetTests/input/errors/reference27.pkl
import "pkl:ref"

typealias MyRef = ref.Reference<ref.Domain, String?>

myRef: MyRef

